# SlowGrid

./: CMakeLists.txt  Dynamic Pathing.txt  Notes.txt  Pathfinding.txt  Plan.txt  SlowGrid.ixx  compile.cmd  test.cmd
.github/workflows/: cmake-multi-platform.yml
Allocator/: Arena_ULL.ixx  BaseArena.ixx  CMakeLists.txt  CachedQueue.ixx  LinkedList.ixx  LinkedList2.ixx  PseudoArena.ixx  RuntimeArray.ixx  SG_Allocator.ixx  UnrolledLinkedList.ixx  UnrolledLinkedList2.ixx  config.ixx  config.ixx.in
Allocator/include/: Allocator.h  Allocator.h.in
Grid/: BaseGrid.ixx  BitfieldFullGrid.ixx  CMakeLists.txt  FullGrid.ixx  Grid.ixx  Point.ixx  RuntimeSizeGrid.ixx  SparseGrid.ixx  config.ixx  config.ixx.in
LocalDataStructures/: CMakeLists.txt  Dequeue.ixx  LocalDataStructures.ixx  Queue.ixx  Stack.ixx  config.ixx  config.ixx.in
Logger/: CMakeLists.txt  Logger.ixx
Logger/include/: Logger.h
Pathfind/: AStar.ixx  BFS.ixx  BreadthFirst.ixx  CMakeLists.txt  Dijkstra.ixx  DijkstraMatrix.ixx  JPS.ixx  Pathfind.ixx  Utils.ixx
Pathfind/HashMap/: BaseHashMap.ixx  GridRangeHashmap.ixx  STDHashmap.ixx
Pathfind/HashSet/: BaseHashSet.ixx  GridRangeHashset.ixx
Pathfind/PriorityQueue/: BasePriorityQueue.ixx  BinaryHeap.ixx  BucketQueue.ixx  HashMapBinaryHeap.ixx  HashMapBucketQueue.ixx  HashSetBinaryHeap.ixx  HashSetBucketQueue.ixx  NoPriorityQueue.ixx  STDNoPriorityQueue.ixx  STDPriorityQueue.ixx
tests/: CMakeLists.txt  test_Arena.cpp  test_BFS.cpp  test_BinaryHeap.cpp  test_BitfieldGrid.cpp  test_BucketQueue.cpp  test_CachedQueue.cpp  test_FullGrid.cpp  test_GridPoint.cpp  test_GridRangeHashmap.cpp  test_GridRangeHashset.cpp  test_HashMapBinaryHeap.cpp  test_HashMapBucketQueue.cpp  test_LinkedList.cpp  test_LocalDequeue.cpp  test_LocalQueue.cpp  test_LocalStack.cpp  test_Logger.cpp  test_NoPriorityQueue.cpp  test_RuntimeSizeGrid.cpp  test_STDHashmap.cpp  test_STDPriorityQueue.cpp  test_SparseGrid.cpp  test_UnrolledLinkedList.cpp
